--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-giggity assets cdn i guess
+<!doctype html>
+<link rel="stylesheet" href="testing.css">
+<script name="searchSuggestions" src="https://youtomb-mobile.github.io/app/header.js"></script>
+
+<link rel="stylesheet" href="https://youtomb-mobile.github.io/app/2015YTm.css">
+<center><div><h1><big>Cmd-Hue: Future Hoster</big></h1></div></center>
+<center><button href="#" onclick="">egg</button></center>
