--- a/appeal-tomb/index.html
+++ b/appeal-tomb/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Extra Verification Required</title>
 </head>
-<meta name="stylesheet" href="/appeal.css">
+<link rel="stylesheet" href="https://cmd-hue.github.io/appeal.css">
 <body>
 <center>
 <h2>Extra Appeal Info</h2>
