--- a/xl/index.html
+++ b/xl/index.html
@@ -962,11 +962,6 @@
               true
             ),
             quality: {_CLASS: 'xl-view-hidden'},
-             generateCheckBoxItem(
-                "I have a fast connection. Always play higher-quality video when it is available.",
-                'config.preferHigherQuality',
-                true
-             ),
             language_button: {
               _CLASS: 'xl-view-button',
               navobject: focusMouseHover,
@@ -3364,7 +3359,7 @@
       }
     }, 1);
   }
-console.log("finished init")
+console.log("finished init");
   -->
   </script>
 
