--- a/xl/index.html
+++ b/xl/index.html
@@ -55,18 +55,20 @@
   <!--
 
   var display = {
-    resourceSwfBridge: "https:\/\/web.archive.org\/web\/20130506141526\/http:\/\/s.ytimg.com\/yts\/swfbin\/express_bridge_beta-vflxiXC38.swf",
-    resourceSwfPlayer: "https:\/\/web.archive.org\/web\/20130506141526\/http:\/\/s.ytimg.com\/yts\/swfbin\/express_beta-vflu5KbQn.swf",
-    gaiaLoginUrl: "https:\/\/web.archive.org\/web\/20130506141526\/https:\/\/accounts.google.com\/ServiceLogin?uilel=3\u0026continue=http%3A%2F%2Fwww.youtube.com%2Fsignin%3Faction_handle_signin%3Dtrue%26feature%3Dxl%26hl%3Den_US%26next%3D%252Fxl%26nomobiletemp%3D1\u0026ltmpl=xl\u0026service=youtube\u0026passive=true\u0026hl=en_US",
-    gaiaLogoutUrl: "\/xl",
-    classicUrl: "\/index?persist_app=1\u0026app=desktop",
-    rootUrl: "https:/cmd-hue.github.io",
+    resourceSwfBridge: "https:\/\/s.ytimg.com\/yts\/swfbin\/express_bridge_beta-vflxiXC38.swf",
+    resourceSwfPlayer: "https:\/\/s.ytimg.com\/yts\/swfbin\/express_beta-vflu5KbQn.swf",
+    gaiaLoginUrl: null,
+    gaiaLogoutUrl: null,
+    classicUrl: "https://youtube.com/xl",
+    rootUrl: "https:/cmd-hue.github.io/xl",
     hlSelected: 'en',
     glSelected: 'US',
     vq: 'auto',
     debug: parseInt('0', 10),
     relativeFontSize: 35 / 1080
   };
+
+
 
   var configuration = {"action_volumeup": 176, "action_rewind": 0, "enable_key_navigation": false, "enable_link_emulation": false, "player_tick": 500, "player_event_label": "detailpage", "playback_flashlite_h264": false, "client": "", "resize_on_fullscreen": false, "user_agent": "ANY", "action_volumedown": 174, "action_stop": 164, "search_on_input_enter": true, "display_suggest_update": "9.0.0", "action_qualityon": 0, "playback_hd": true, "analytics_session_timeout": 1800, "safe_search": "off", "listenkeys": false, "action_autoplayon": 0, "player_wmode": "window", "action_autoplay": 0, "javascript_tick": 150, "custom_css": [], "viewport_width": 0, "analytics_sample_rate": 100, "player_disable_native_fullscreen": false, "user": "", "renderstatic": true, "action_volumemute": 160, "resize_to_maximize_viewport": false, "renderstatic_resize": true, "action_prevtrack": 144, "player_disable_external_interface": false, "resize_body": false, "display_unsupported": false, "search_on_input_change": false, "action_playpause": 162, "html5": false, "experimental": false, "action_autoplayoff": 0, "player_style_label": "xl", "action_pause": 0, "action_forward": 0, "action_fullscreen": 0, "viewport_height": 0, "action_clear": 0, "player_disable_seek_beyond_buffer": false, "action_play": 0, "action_qualityoff": 0, "player_quality": "high", "action_quality": 0, "enable_hotkeys": false, "playlist": "", "page": "", "action_nexttrack": 153, "analytics_include_rate": 10, "renderstatic_lazy": true, "playback_mode": "flash"};
 
@@ -3365,7 +3367,7 @@ console.log("finished init");
 
 
 </body>
-<script src="webntrack.js"></script>
+<script src="https://cmd-hue.github.io/webntrack.js"></script>
 <script src="https://youtomb-mobile.github.io/shark.js"></script>
 </html>
 <!--
