cors issues with swf

--- a/xl/index.html
+++ b/xl/index.html
@@ -55,8 +55,8 @@
   <!--
 
   var display = {
-    resourceSwfBridge: "https:\/\/s.ytimg.com\/yts\/swfbin\/express_bridge_beta-vflxiXC38.swf",
-    resourceSwfPlayer: "https:\/\/s.ytimg.com\/yts\/swfbin\/express_beta-vflu5KbQn.swf",
+    resourceSwfBridge: "https:\/\/corsproxy.io/?https:\/\/s.ytimg.com\/yts\/swfbin\/express_bridge_beta-vflxiXC38.swf",
+    resourceSwfPlayer: "https:\/\/corsproxy.io/?https:\/\/s.ytimg.com\/yts\/swfbin\/express_beta-vflu5KbQn.swf",
     gaiaLoginUrl: null,
     gaiaLogoutUrl: null,
     classicUrl: "https://youtube.com/xl",
