--- a/xl/index.html
+++ b/xl/index.html
@@ -59,7 +59,7 @@
     resourceSwfPlayer: "express_beta.swf",
     gaiaLoginUrl: null,
     gaiaLogoutUrl: null,
-    classicUrl: "https://youtube.com/xl",
+    classicUrl: "https://youtube.com/",
     rootUrl: "https:/cmd-hue.github.io/xl",
     hlSelected: 'en',
     glSelected: 'US',
@@ -3123,8 +3123,8 @@
         service_browse_uservideos: [
           serviceBrowseUserVideos(cacheSubscriptions, 'console_profile_subscriptions', "No Subscriptions Found"),
           serviceBrowseUserVideos(cachePlaylists, 'console_profile_playlists', "No Playlists Found"),
-          serviceBrowseUserVideos(cacheUploads, 'console_profile_videos', "No Videos Uploaded"),
-          serviceBrowseUserVideos(cacheFavorites, 'console_profile_favorites', "No Videos Favorited")
+          serviceBrowseUserVideos(cacheUploads, 'texas.json', "No Videos Uploaded"),
+          serviceBrowseUserVideos(cacheFavorites, 'https://corsproxy.io/?https://gdata.vidtape.lol/console_browse?start-index=1&max-results=40&feed=mpt_top_music_today&racy=include&app=desktop', "No Videos Favorited")
         ],
         service_browse_search: serviceBrowseSearch(cacheSearch, 'https://corsproxy.io/?https://gdata.vidtape.lol/console_browse?t=t&secure=1&client=leanback&s=mp&offweb=0&c=you&max-results=10&lite=1&start-index=1', "No Videos Found in Search"),
         service_related: [
