--- a/xl/index.html
+++ b/xl/index.html
@@ -219,7 +219,7 @@
 
   var textNoVideosFound = "No Videos Found";
 
-  var get = "HOW?!?!?"
+  var github = "HOW?!?!?"
 
 
   var viewSubmenuBrowse = [
