--- a/xl/index.html
+++ b/xl/index.html
@@ -3128,7 +3128,7 @@
           serviceBrowseUserVideos(cacheUploads, 'texas.json', "No Videos Uploaded"),
           serviceBrowseUserVideos(cacheFavorites, 'https://corsproxy.io/?https://gdata.vidtape.lol/console_browse?start-index=1&max-results=40&feed=mpt_top_music_today&racy=include&app=desktop', "No Videos Favorited")
         ],
-        service_browse_search: serviceBrowseSearch(cacheSearch, 'https://corsproxy.io/?https://gdata.vidtape.lol/console_browse?t=t&secure=1&client=leanback&s=mp&offweb=0&c=you&max-results=10&lite=1&start-index=1', "No Videos Found in Search"),
+        service_browse_search: serviceBrowseSearch(cacheSearch, 'texas.json', github),
         service_related: [
           serviceRelated(cacheRelated1, ''),
           serviceRelated(cacheRelated2, 'https://corsproxy.io/?https://gdata.vidtape.lol/console_browse?t=t&secure=1&client=leanback&s=mp&offweb=0&c=you&max-results=10&lite=1&start-index=1')
