--- a/xl/index.html
+++ b/xl/index.html
@@ -3364,6 +3364,20 @@
     }, 1);
   }
 console.log("finished init");
+(function() {
+  let swapped = false;
+  document.addEventListener('keydown', function(e) {
+    if (e.altKey && e.key.toLowerCase() === 'v') {
+      e.preventDefault();
+      const oldURL = "https://web.archive.org/web/20130123105426cs_/http://s.ytimg.com/yts/css/xl-vfleA7mEU.css";
+      const newURL = "https://corsproxy.io/?https://www.vidtape.lol/xl/xl-base-vfl92884.css";
+      const link = [...document.querySelectorAll('link[rel="stylesheet"]')].find(l => l.href.includes(swapped ? newURL : oldURL));
+      if (link) link.href = swapped ? oldURL : newURL;
+      swapped = !swapped;
+    }
+  });
+})();
+
   -->
   </script>
 
