--- a/xl/index.html
+++ b/xl/index.html
@@ -3142,7 +3142,7 @@
         service_subscribe: serviceSubscribe(),
         service_unsubscribe: serviceUnsubscribe(),
         service_playlist_item: servicePlaylistItem(cachePlaylistVideos, ''),
-        service_recommended: serviceRecommended(cacheRecommended, 'console_profile_recommendation', textNoVideosFound)
+        service_recommended: serviceRecommended(cacheRecommended, 'rec.json', textNoVideosFound)
       },
       cache: cacheMore,
       placeholders: [
