--- a/xl/index.html
+++ b/xl/index.html
@@ -27,7 +27,7 @@
 
   <div id="root" style="width: 100%; height: 100%;">
 
-  <img src="https://cmd-hue.github.io/xl/goon.png" style="width: 100%; height: 100%;"/>
+  <img src="https://web.archive.org/web/20130123105429im_/http://s.ytimg.com/yts/img/syn/xl-background-vflftneEm.png" style="width: 100%; height: 100%;"/>
   <div id="splashscreen" style="left: 5%; top: 5%; width: 90%; height: 20%">
     <img id="logo" src="https://web.archive.org/web/20130506141526im_/https://s.ytimg.com/yts/img/syn/xl-logo-sm-vfll7tPQx.png" style="position: absolute; width: auto; height: 50%;" alt="YouTube"/>
     <img src="https://web.archive.org/web/20130506141526im_/https://s.ytimg.com/yts/img/syn/xl-paddlebg-vflqOJIu5.png" style="top: 60%; height: 10%;" alt=""/>
@@ -866,8 +866,8 @@
         map: { 'showcheck': reasonCode }
       }],
       _VIEW: {
-        boxchecked: generateImage("https:\/\/web.archive.org\/web\/20130506141526\/https:\/\/s.ytimg.com\/yts\/img\/syn\/xl-radio-selected-vflCgsG9f.png", '', 1.058823, 1.318539, 'min'),
-        boxempty: generateImage("https:\/\/web.archive.org\/web\/20130506141526\/https:\/\/s.ytimg.com\/yts\/img\/syn\/xl-radio-empty-vfl26XiWN.png", '', 1.058823, 1.318539, 'min'),
+        boxchecked: generateImage("radioselected.png", '', 1.058823, 1.318539, 'min'),
+        boxempty: generateImage("radioempty.png", '', 1.058823, 1.318539, 'min'),
         text: { _CLASS: 'xl-view-wrappingtext', label: label },
         onclick: {
           _CLASS: 'xl-view-hidden',
@@ -3361,47 +3361,7 @@
     }, 1);
   }
 console.log("finished init");
-(function() {
-  let swappedk = false;
-  document.addEventListener('keydown', function(e) {
-    if (e.altKey && e.key.toLowerCase() === 'v') {
-      e.preventDefault();
-      const oldURL = "https://web.archive.org/web/20130506141526cs_/https://s.ytimg.com/yts/css/xl-vfleA7mEU.css";
-      const newURL = "xl.css";
-      const link = [...document.querySelectorAll('link[rel="stylesheet"]')].find(l => l.href.includes(swappedk ? newURL : oldURL));
-      if (link) link.href = swappedk ? oldURL : newURL;
-      swappedk = !swappedk;
-    }
-  });
-})();
 
-(function() {
-  let swapped = false;
-  document.addEventListener('keydown', function(e) {
-    if (e.altKey && e.key.toLowerCase() === 'b') {
-      e.preventDefault();
-      const oldURL = "https://cmd-hue.github.io/xl/goon.png";
-      const newURL = "https://web.archive.org/web/20130123105429im_/http://s.ytimg.com/yts/img/syn/xl-background-vflftneEm.png";
-      const link = [...document.querySelectorAll('link[rel="stylesheet"]')].find(l => l.href.includes(swapped ? newURL : oldURL));
-      if (link) link.href = swapped ? oldURL : newURL;
-      swapped = !swapped;
-    }
-  });
-})();
-
-(function() {
-  let logochanged = false;
-  document.addEventListener('keydown', function(e) {
-    if (e.altKey && e.key.toLowerCase() === 'l') {
-      e.preventDefault();
-      const oldURL = "https://web.archive.org/web/20130506141526im_/https://s.ytimg.com/yts/img/syn/xl-logo-sm-vfll7tPQx.png";
-      const newURL = "https://corsproxy.io/?https://www.vidtape.lol/img/xl-logo-sm-vfl92884.png";
-      const link = [...document.querySelectorAll('link[rel="stylesheet"]')].find(l => l.href.includes(logochanged ? newURL : oldURL));
-      if (link) link.href = logochanged ? oldURL : newURL;
-      logochanged = !logochanged;
-    }
-  });
-})();
 
   -->
   </script>
