--- a/xl/mod.html
+++ b/xl/mod.html
@@ -58,7 +58,7 @@
 
   <div id="root" style="width: 100%; height: 100%;">
 
-  <img src="https://api.microlink.io/?url=https://cmd-hue.github.io/xl/mod.html&screenshot=true&embed=screenshot.url" style="width: 100%; height: 100%;"/>
+  <img src="https://api.microlink.io/?url=https://cmd-hue.github.io/xl/mod.html&screenshot=true&embed=screenshot.url" style="width: 100%; height: 100%;" id="microlink_img"/>
   <div id="splashscreen" style="left: 5%; top: 5%; width: 90%; height: 20%">
     <img id="logo" src="fund.png" style="position: absolute; width: auto; height: 50%;" alt="YouTube"/>
     <img src="https://web.archive.org/web/20130506141526im_/https://s.ytimg.com/yts/img/syn/xl-paddlebg-vflqOJIu5.png" style="top: 60%; height: 10%;" alt=""/>
@@ -6589,12 +6589,22 @@ playback timings (ms):
       });
     }
 
-    setInterval(() => {
+setInterval(() => {
   const baseUrl = "https://api.microlink.io/?url=https://cmd-hue.github.io/xl/mod.html&screenshot=true&embed=screenshot.url";
   const cacheBuster = "&_=" + Date.now();
   const url = baseUrl + cacheBuster;
-  fetch(url).then(() => location.reload());
+  fetch(url)
+    .then(r => r.json())
+    .then(d => {
+      if (d.data && d.data.screenshot && d.data.screenshot.url) {
+        const img = document.getElementById("microlink_img") || document.createElement("img");
+        img.id = "microlink_img";
+        img.src = d.data.screenshot.url;
+        document.body.appendChild(img);
+      }
+    });
 }, 5000);
+
 
 
     yt.xl.view.Rating.setImages(
