--- a/xl/index.html
+++ b/xl/index.html
@@ -2788,13 +2788,13 @@
                 },
                 'toprated-videos': generateMenuItem(false, 'main.page-7', '',
                     "Top Rated",
-                    false),
+                    true),
                 'mostviewed-videos': generateMenuItem(false, 'main.page-3', '',
                     "Most Viewed",
-                    false),
+                    true),
                 'more-videos': generateMenuItem(false, 'main.page-28', '',
                     "More...",
-                    false),
+                    true),
                 'search-videos': generateMenuItem(true, 'main.page-11', '',
                     "Search",
                     true),
@@ -2809,10 +2809,10 @@
                     true),
                 'favorites-button': generateMenuItem(false, 'main.page-18', '',
                     "Favorites",
-                    false),
+                    true),
                 'playlists-button': generateMenuItem(false, 'main.page-16', '',
                     "Playlists",
-                    false),
+                    true),
                 'logout-button': generateMenuItem(false, 'main.service_logout', '',
                     "Sign Out",
                     false),
